# playful-panda

./: .editorconfig  .env.development  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docker/: .env  docker-compose.yml  redis.conf
http/: test_command.http
src/: app_state.rs  main.rs  settings.rs  short_id.rs
src/configuration/: host_settings.rs  mod.rs  redis_settings.rs  short_id_settings.rs
src/endpoints/: generate.rs  health.rs  mod.rs  redirect.rs  redis_client.rs  short_id.rs
url_short/: Cargo.toml
