[package]
name = "url_short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
redis = { version = "0.25.3", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
actix-web = "4.5.1"
env_logger = "0.11.1"
serde = { version = "1.0.197", features = ["derive"] }
dotenvy = "0.15.7"
