[package]
name = "url_short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
redis = { version = "0.25.3", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
serde = { version = "1.0.197", features = ["derive"] }
dotenvy = "0.15.7"
axum = "0.7.5"
axum-prometheus = "0.6.1"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
url = "2.5.0"
